--- a/src/components/MovieListing/MovieListing.css
+++ b/src/components/MovieListing/MovieListing.css
@@ -1,8 +1,8 @@
-.movie-list {
+.movie-list, .show-list {
   margin: 20px 0;
 }
 
-.movie-list h2 {
+.movie-list h2, .show-list h2 {
   color: #79b8f3;
   margin-bottom: 10px;
   font-weight: 400;
